# jesse-trading

./: .env  .gitignore  README.md  pyproject.toml
jesse_trading/: charts.py
jesse_trading/analyzers/: candle_patterns.py  test_candle_patterns.py
jesse_trading/jesse_bot/: .env.example
jesse_trading/jesse_bot/strategies/EngulfingStrategy/: __init__.py
jesse_trading/jesse_bot/strategies/FibRetracement/: __init__.py
jesse_trading/jesse_bot/strategies/HammerStrategy/: __init__.py
jesse_trading/tests/: test_talib_candles.py
jesse_trading/tests/analyzers/: test_candle_patterns.py
jesse_trading/utils/: import_candles.py
tests/: test_talib_candles.py
tests/analyzers/: test_candle_patterns.py
