[tool.poetry]
name = "jesse-trading"
version = "0.1.0"
description = ""
authors = ["zions <tzion12345@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jesse = {path = "jesse", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
