[tool.poetry]
name = "jesse-trading"
version = "0.1.0"
description = ""
authors = ["zions <tzion12345@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jesse = {path = "jesse", develop = true}
pandas-ta = "^0.3.14b0"
ta-lib = "^0.4.28"
ipython = "7.16.1"
    

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
